--- a/configuration/templates/account/tsi-contact-email.hbs
+++ b/configuration/templates/account/tsi-contact-email.hbs
@@ -1,6 +1,6 @@
 {{~#with (getProperty @root.context.metaData.tsiList (slugify @root.data.search_data.hits.hits.[0].district)) ~}}
 {{~#each contacts ~}}
-{{~#if (regexMatch @root.data.search_data.hits.hits.[0].place @key "gi") ~}}
+{{~#if (regexMatch @root.data.search_data.hits.hits.[0].place pattern "gi") ~}}
 {{email}}
 {{~/if ~}}
 {{~/each ~}}
