--- a/configuration/templates/search-postcode-lookup.hbs
+++ b/configuration/templates/search-postcode-lookup.hbs
@@ -5,14 +5,14 @@
     "place": {{{stringify _source.place}}},
     "tsiArea": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}}
     {{~#each contacts ~}}
-    {{~#if (regexMatch ../../_source.place @key "gi") ~}}
+    {{~#if (regexMatch ../../_source.place pattern "gi") ~}}
     {{~#if area~}}{{area}}{{else}}{{../local_authority}}{{~/if~}}
     {{~/if ~}}
     {{~/each ~}}
     {{~/with ~}}",
     "tsiContact": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}}
     {{~#each contacts ~}}
-    {{~#if (regexMatch ../../_source.place @key "gi") ~}}
+    {{~#if (regexMatch ../../_source.place pattern "gi") ~}}
     {{email}}
     {{~/if ~}}
     {{~/each ~}}
