--- a/configuration/templates/account/verify-email.hbs
+++ b/configuration/templates/account/verify-email.hbs
@@ -5,7 +5,7 @@
   "h:sender": "hello@saltireawards.org.uk",
   {{#compare @root.data.accountInfo.user_type "===" "Group Admin"}}
   "to": "alex.nuttgens@scvo.org.uk",
-  "wouldbe": "{{{@root.data.tsiContact}}}",
+  "wouldbe": "something",
   {{else}}
   "to": "{{{verification_email}}}",
   {{/compare}}
