--- a/configuration/partials/opportunity/actions.hbs
+++ b/configuration/partials/opportunity/actions.hbs
@@ -3,4 +3,13 @@
     <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="mdc-card__action hide-sm">Find out more</a>
     <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="mdc-card__action hide-md hide-lg"><span class="fal fa-info-circle fa-fw fa-2x" aria-hidden="true"></span></a>
   </div>
+  <div class="mdc-card__action-icons pull-right">
+    <div id="action-chips" class="mdc-chip-set mdc-chip-set--filter">
+      {{#if opportunity_contact_email ~}}
+        {{> opportunity_register_interest_faux_chip id=Id}}
+      {{else}}
+        {{> opportunity_register_interest_faux_chip disabled=true}}
+      {{/if ~}}
+    </div>
+  </div>
 </div>
