--- a/configuration/templates/account/sign-up-details.hbs
+++ b/configuration/templates/account/sign-up-details.hbs
@@ -1,5 +1,4 @@
-<div class="sign-up-form">
-<div id="detailed-results-container" class="container-content content-notes">
+<div class="sign-up-form container-content content-page container-centred container-home">
   <h2 class="mdc-typography--headline4">Add your details</h2>
 
   <div class="mdc-typography--headline6 b-margin-full">
@@ -24,7 +23,6 @@
       Submit details
     </button>
   </form>
-</div>
 </div>
 {{!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> --}}
 <script>
