--- a/configuration/templates/account/sign-in.hbs
+++ b/configuration/templates/account/sign-in.hbs
@@ -3,7 +3,7 @@
     <div class="mdc-card__info--content-primary">
       <div class="mdc-card__info--content-primary-title mdc-typography--headline4 x-padding">
         {{#if @root.request.params.query.reauth}}
-          Reauthenticate
+          Please sign in again
         {{else}}
           Welcome back! Please sign in
         {{/if}}
