--- a/configuration/templates/pages/hours.hbs
+++ b/configuration/templates/pages/hours.hbs
@@ -111,6 +111,7 @@
             </div>
           </div>
         </form>
+        {{#compare (length hours_list) ">" 0 ~}}
         <div class="mdc-layout-grid__inner">
           <div
             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone">
@@ -136,7 +137,6 @@
             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
           </div>
         </div>
-
         {{#each hours_list ~}}
           <form id="{{hours_id}}" method="POST" action="/submit-group-hours" class="inline-hours-form" data-ajax-form=''>
             <input type="hidden" name="task_id" value="{{task_id}}">
@@ -191,8 +191,8 @@
               </div>
             </div>
           </form>
-
         {{/each ~}}
+        {{/compare ~}}
       {{/unless}}
     {{/each}}
     {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
