--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -9,7 +9,7 @@
           Aged 12-25 and volunteer?
         </h2>
         <p class="mdc-typography--body2">
-          <strong>The Saltire Awards are the Scottish Government’s way of celebrating,<br />
+          <strong>The Saltire Awards are the Scottish Government's way of celebrating,<br />
           recognising and rewarding the commitment, contribution and <br />
           achievements of young volunteers in Scotland.</strong>
         </p>
