--- a/configuration/templates/account/approval-required.hbs
+++ b/configuration/templates/account/approval-required.hbs
@@ -1,10 +1,17 @@
-<div class="container-content content-account">
+<div class="sign-up-form container-content content-page container-centred container-home">
   <div class="content-primary">
-  <h2>{{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} verification</h2>
-  <p>{{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} verification needed. An email has been sent to your Third Sector Interface.
-    {{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}please ask your parent or guardian to click the link in that email{{/compare}}.</p>
-  <button onclick="sendVerifyEmail(true)">Resend Email</button>
-{{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}<button onclick="revealForm()">Change Email Address</button>{{/compare}}
+  <h2>{{#compare @root.data.accountInfo.user_type "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} approval</h2>
+  <p>
+    {{#compare @root.data.accountInfo.user_type "Volunteer"}}
+    Please ask your parent or guardian to open the link in the email sent to them from the Saltire Awards.
+    {{else}}
+    TSI approval required. An email has been sent to your Third Sector Interface.
+    {{/compare}}
+  </p>
+  <button onclick="sendApprovalEmail(true)">Resend email</button>
+  {{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}
+  <button onclick="revealForm()">Change email address</button>
+  {{/compare}}
   </div>
   <form id="user-details-form" style="display:none;"  method="POST" action="submit-user-details">
     Please enter the new email address below.
@@ -16,7 +23,7 @@
     {{/compare}}
     {{/each}}
     <div class="mdc-layout-grid">
-      <div id="verification" class="mdc-layout-grid__inner">
+      <div id="approval" class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
           <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
             <input type="email" id="verification_email" name="verification_email" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.verification_email}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
@@ -43,10 +50,8 @@
     var x = document.getElementById("user-details-form");
     x.style.display = "block";
   }
-
   document.addEventListener("DOMContentLoaded", function(event) {
     var $form = $('#user-details-form');
-
     $form.on('submit', function(evt) {
       var formdata = $form.serialize();
       evt.preventDefault();
@@ -55,14 +60,12 @@
         type: 'POST',
         data: formdata, // serializes the form's elements.
       }).done(function (data) {
-        window.location.href = '/verification-required';
+        window.location.href = '/approval-required';
       }).fail(function (err) {
         $message.text(err.message || 'There was a problem adding your details').show();
         $loader.css('display', 'none');
         return;
       });
     })
-
   })
-
 </script>
