--- a/configuration/templates/account/approval-pass.hbs
+++ b/configuration/templates/account/approval-pass.hbs
@@ -1,6 +1,6 @@
 <div class="sign-up-form container-content content-page container-centred container-home">
-  <h2>{{#compare @root.data.accountInfo.user_type "Volunteer"}}Parent or guardian{{else}}Group Administrator{{/compare}}  verification</h2>
+  <h2>{{#compare @root.data.accountInfo.user_type "Volunteer"}}Parent or guardian{{else}}Group Administrator{{/compare}}  account approval</h2>
   <p>
-    Verification successful. {{@root.data.accountInfo.first_name}} will now be able to use all the features of this site.
+    Approval successful. {{@root.data.accountInfo.first_name}} will now be able to use all the features of this site.
   </p>
 </div>
