--- a/configuration/templates/account/approval-required.hbs
+++ b/configuration/templates/account/approval-required.hbs
@@ -1,4 +1,4 @@
-<div class="sign-up-form container-content content-page container-centred container-home">
+<div id="detailed-results-container" class="container-content content-notes">
   <div class="content-primary">
   <h2>{{#compare @root.data.accountInfo.user_type "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} approval</h2>
   <p>
@@ -18,9 +18,9 @@
 
     {{/compare}}
   </p>
-  <button onclick="sendApprovalEmail(true)">Resend email</button>
+  <button onclick="sendApprovalEmail(true)" class="mdc-button mdc-button--raised">Resend email</button>
   {{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}
-  <button onclick="revealForm()">Change email address</button>
+  <button onclick="revealForm()" class="mdc-button mdc-button--raised">Change email address</button>
   {{/compare}}
   </div>
   <form id="user-details-form" style="display:none;"  method="POST" action="submit-user-details">
