--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -298,7 +298,18 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone info">
                   <h3>Help</h3>
                   <div class="mdc-typography--body2 b-margin">
-                    The local Third Sector Interface in your area manages your personal data in relation to the Saltire Awards.
+                    {{#if @root.data.accountInfo.local_authority ~}}
+                    {{#with (getProperty @root.context.metaData.tsiList (slugify @root.data.accountInfo.local_authority)) ~}}
+                    {{#each contacts ~}}
+                    {{#if (regexMatch @root.data.accountInfo.postcode pattern "gi") ~}}
+                    <a href="{{fixUrl website}}" target="_blank">{{title}}</a>
+                    {{/if ~}}
+                    {{/each ~}}
+                    {{/with ~}}
+                    {{else}}
+                    The local Third Sector Interface in your area
+                    {{/if ~}}
+                    manages your personal data in relation to the Saltire Awards.
                   </div>
                   <ul class="mdc-list">
                     <li class="mdc-list-item">
@@ -315,7 +326,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone about">
                   <h3>About</h3>
                   <p>
-                    <strong>The Saltire Awards</strong> is run by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>, managed by Scotland's <a href="https://www.gov.scot/policies/third-sector/third-sector-interfaces">Third Sector Interfaces</a> and supported by the <a href="https://www.gov.scot/policies/third-sector">Scottish Government</a>. <a href="/about">Find out more</a>
+                    <strong>The Saltire Awards</strong> is run by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a> and supported by the <a href="https://www.gov.scot/policies/third-sector">Scottish Government</a> and Scotland's <a href="https://www.gov.scot/policies/third-sector/third-sector-interfaces">Third Sector Interfaces</a>. <a href="/about">Find out more</a>
                   </p>
                 </div>
               </div>
