--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -383,7 +383,7 @@
     $(document).ready(function() {
       saltireawards = new SaltireAwards.SaltireAwards({
         apiKey: "AIzaSyBdoW5NoWqvMFMUKufrPVvuaYtNrEIRY6k",
-        authDomain: "saltire-awards.firebaseapp.com",
+        authDomain: "auth.saltireawards.scot",
         databaseURL: "https://saltire-awards.firebaseio.com",
         projectId: "saltire-awards",
         storageBucket: "saltire-awards.appspot.com",
