--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -322,6 +322,11 @@
                     {{/if ~}}
                     {{/each ~}}
                     {{/with ~}}
+                    {{else}}
+                    <li>
+                      <span class="fa-li"><span class="fab fa-twitter"></span></span>
+                      <a href="https://twitter.com/saltireawards" target="_blank">Twitter</a>
+                    </li>
                     {{/if ~}}
                   </ul>
                 </div>
