--- a/configuration/templates/account/settings.hbs
+++ b/configuration/templates/account/settings.hbs
@@ -62,7 +62,7 @@
           </h3>
           <span class="mdc-typography--body1">You are currently using a social media account to sign in. If you set a password you will also be able to sign in with your email address.</span>
           {{/if ~}}
-          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
             <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
             <input type="password" id="change-password-password" class="mdc-text-field__input" data-lpignore="true" autocomplete="off" />
             <label class="mdc-floating-label mdc-floating-label--float-above" for="change-password">
@@ -70,7 +70,7 @@
             </label>
             <div class="mdc-line-ripple"></div>
           </div>
-          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
             <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
             <input type="password" id="change-password-confirm" class="mdc-text-field__input" data-lpignore="true" autocomplete="off" />
             <label class="mdc-floating-label mdc-floating-label--float-above" for="change-password-confirm">
