--- a/configuration/templates/account/settings.hbs
+++ b/configuration/templates/account/settings.hbs
@@ -65,18 +65,28 @@
           <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
             <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
             <input type="password" id="change-password-password" class="mdc-text-field__input" data-lpignore="true" autocomplete="off" />
-            <label class="mdc-floating-label mdc-floating-label--float-above" for="change-password">
-              Password
-            </label>
-            <div class="mdc-line-ripple"></div>
+            <div class="mdc-notched-outline">
+              <div class="mdc-notched-outline__leading"></div>
+              <div class="mdc-notched-outline__notch">
+                <label for="change-password" class="mdc-floating-label">
+                  Password
+                </label>
+              </div>
+              <div class="mdc-notched-outline__trailing"></div>
+            </div>
           </div>
           <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
             <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
             <input type="password" id="change-password-confirm" class="mdc-text-field__input" data-lpignore="true" autocomplete="off" />
-            <label class="mdc-floating-label mdc-floating-label--float-above" for="change-password-confirm">
-              Confirm password
-            </label>
-            <div class="mdc-line-ripple"></div>
+            <div class="mdc-notched-outline">
+              <div class="mdc-notched-outline__leading"></div>
+              <div class="mdc-notched-outline__notch">
+                <label for="change-password-confirm" class="mdc-floating-label">
+                  Confirm password
+                </label>
+              </div>
+              <div class="mdc-notched-outline__trailing"></div>
+            </div>
           </div>
           <button class="mdc-button mdc-button--raised mdc-button--change_password mdc-button--fullwidth" id="change-password">
             <span class="far fa-lock mdc-list-item__graphic" aria-hidden="true"></span>
