--- a/configuration/partials/account/details-form-fields.hbs
+++ b/configuration/partials/account/details-form-fields.hbs
@@ -33,6 +33,9 @@
           <input id="date_of_birth" name="date_of_birth" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.date_of_birth}}" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth_checked}}{{/if}}>
         {{else}}
           <input id="date_of_birth_checked" name="date_of_birth" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.date_of_birth}}" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth_checked}}{{/if}}>
+          {{#if @root.data.accountInfo.date_of_birth}}
+          <input type="hidden" name="date_of_birth" value="{{@root.data.accountInfo.date_of_birth}}">
+          {{/if}}
         {{/if}}
         <div class="mdc-notched-outline">
           <div class="mdc-notched-outline__leading"></div>
@@ -141,13 +144,13 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
       <input type="hidden" name="local_authority" id="local_authority" value="{{@root.data.accountInfo.local_authority}}" />
       <input type="hidden" name="tsi_area" id="tsi_area" value="{{@root.data.accountInfo.tsi_area}}" />
-      <input type="hidden" name="tsi_contact" id="tsi_contact" value="{{@root.data.accountInfo.tsi_contact}}" />
+      <input type="hidden" name="tsi_contact_email" id="tsi_contact" value="{{@root.data.accountInfo.tsi_contact_email}}" />
       <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField" style="z-index:100;">
         <span class="far fa-map-marker-alt mdc-text-field__icon postcode-lookup" tabindex="0" title="Find my location"></span>
         <input type="text" id="postcode" name="postcode" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.postcode}}" placeholder="" data-lpignore="true" data-location-search='{
           "laSelector": "[name=\"local_authority\"]",
           "tsiAreaSelector": "[name=\"tsi_area\"]",
-          "tsiContactSelector": "[name=\"tsi_contact\"]",
+          "tsiContactSelector": "[name=\"tsi_contact_email\"]",
           "locationServicesSelector": ".postcode-lookup"
         }' {{>form_validation_attributes @root.context.metaData.accountInfoValidation.postcode}}>
         <div class="mdc-notched-outline">
