--- a/configuration/partials/account/details-form-fields.hbs
+++ b/configuration/partials/account/details-form-fields.hbs
@@ -1,170 +1,115 @@
-<div class="mdc-layout-grid">
-  <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-        <input required id="first_name" name="first_name" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.first_name}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.first_name}}>
-        {{!-- value="{{@root.data.user_details.first_name}}"> --}}
-        <div class="mdc-notched-outline">
-          <div class="mdc-notched-outline__leading"></div>
-          <div class="mdc-notched-outline__notch">
-            <label for="first_name" class="mdc-floating-label">First name</label>
-          </div>
-          <div class="mdc-notched-outline__trailing"></div>
-        </div>
-      </div>
-    </div>
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-        <input required id="last_name" name="last_name" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.last_name}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.last_name}}>
-        <div class="mdc-notched-outline">
-          <div class="mdc-notched-outline__leading"></div>
-          <div class="mdc-notched-outline__notch">
-            <label for="last_name" class="mdc-floating-label">Last name</label>
-          </div>
-          <div class="mdc-notched-outline__trailing"></div>
-        </div>
-      </div>
+<div class="pure-g">
+  <div class="pure-u-1-2">
+    <div class="form-group">
+      <input required id="first_name" name="first_name" value="{{@root.data.accountInfo.first_name}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.first_name}}>
+      <label for="first_name" class="control-label">First name</label>
+      <span class="bar"></span>
     </div>
   </div>
-  <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      <div class="mdc-text-field mdc-text-field--outlined {{#if @root.data.accountInfo.date_of_birth}}mdc-text-field--disabled{{/if}}" data-mdc-auto-init="MDCTextField">
-        {{#if admin}}
-          <input id="date_of_birth" name="date_of_birth" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.date_of_birth}}" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth_checked}}{{/if}}>
-        {{else}}
-          <input id="date_of_birth_checked" name="date_of_birth" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.date_of_birth}}" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth_checked}}{{/if}}>
+  <div class="pure-u-1-2">
+    <div class="form-group">
+      <input required id="last_name" name="last_name" value="{{@root.data.accountInfo.last_name}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.last_name}}>
+      <label for="last_name" class="control-label">Last name</label>
+      <span class="bar"></span>
+    </div>
+  </div>
+</div>
+<div class="pure-g">
+  <div class="pure-u-1-2">
+    <div class="form-group {{#if @root.data.accountInfo.date_of_birth}}form-group-disabled{{/if}}">
+      {{#if admin}}
+        <input id="date_of_birth" name="date_of_birth" value="{{@root.data.accountInfo.date_of_birth}}" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth_checked}}{{/if}}>
+      {{else}}
+        <input id="date_of_birth_checked" name="date_of_birth" value="{{@root.data.accountInfo.date_of_birth}}" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth_checked}}{{/if}}>
+        {{#if @root.data.accountInfo.date_of_birth}}
+        <input type="hidden" name="date_of_birth" value="{{@root.data.accountInfo.date_of_birth}}">
         {{/if}}
-        <div class="mdc-notched-outline">
-          <div class="mdc-notched-outline__leading"></div>
-          <div class="mdc-notched-outline__notch">
-            <label for="date_of_birth" class="mdc-floating-label">Date of birth</label>
-          </div>
-          <div class="mdc-notched-outline__trailing"></div>
-        </div>
-      </div>
-    </div>
-    {{#if @root.data.accountInfo.date_of_birth ~}}
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      <p class="mdc-typography--caption l-margin t-margin-full">
-        If your date of birth is incorrect please
-        {{#if @root.data.accountInfo.local_authority ~}}
-        {{#with (getProperty @root.context.metaData.tsiList (slugify @root.data.accountInfo.local_authority)) ~}}
-        {{#each contacts ~}}
-        {{#if (regexMatch @root.data.accountInfo.postcode pattern "gi") ~}}
-        <a href="mailto:{{email}}">contact us</a>.
-        {{/if ~}}
-        {{/each ~}}
-        {{/with ~}}
-        {{else}}
-        <a href="mailto:info@saltireawards.org.uk">contact us</a>.
-        {{/if ~}}
-      </p>
-    </div>
-    {{/if ~}}
-  </div>
-  {{#unless admin ~}}
-  <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-        <input id="school_college_name" name="school_college_name" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.school_college_name}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.school_college_name}}>
-        <div class="mdc-notched-outline">
-          <div class="mdc-notched-outline__leading"></div>
-          <div class="mdc-notched-outline__notch">
-            <label for="school_college_name" class="mdc-floating-label">School/college name</label>
-          </div>
-          <div class="mdc-notched-outline__trailing"></div>
-        </div>
-      </div>
+      {{/if}}
+      <label for="date_of_birth" class="control-label">Date of birth</label>
+      <span class="bar"></span>
     </div>
   </div>
-    <div id="verification" class="mdc-layout-grid__inner" style="display: none">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-        <input type="email" id="verification_email" name="verification_email" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.verification_email}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
-        <div class="mdc-notched-outline">
-          <div class="mdc-notched-outline__leading"></div>
-          <div class="mdc-notched-outline__notch">
-            <label for="verification_email" class="mdc-floating-label">Your parent or guardian's email address</label>
-          </div>
-          <div class="mdc-notched-outline__trailing"></div>
-        </div>
+  {{#if @root.data.accountInfo.date_of_birth ~}}
+  <div class="pure-u-1-2">
+    <p class="caption l-margin t-margin-full">
+      If your date of birth is incorrect please
+      {{#if @root.data.accountInfo.local_authority ~}}
+      {{#with (getProperty @root.context.metaData.tsiList (slugify @root.data.accountInfo.local_authority)) ~}}
+      {{#each contacts ~}}
+      {{#if (regexMatch @root.data.accountInfo.postcode pattern "gi") ~}}
+      <a href="mailto:{{email}}">contact us</a>.
+      {{/if ~}}
+      {{/each ~}}
+      {{/with ~}}
+      {{else}}
+      <a href="mailto:info@saltireawards.org.uk">contact us</a>.
+      {{/if ~}}
+    </p>
+  </div>
+  {{/if ~}}
+</div>
+{{#unless admin ~}}
+<div class="pure-g">
+  <div class="pure-u-1-2">
+    <div class="form-group">
+      <input id="school_college_name" name="school_college_name" value="{{@root.data.accountInfo.school_college_name}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.school_college_name}}>
+      <label for="school_college_name" class="control-label">School/college name</label>
+      <span class="bar"></span>
+    </div>
+  </div>
+</div>
+  <div id="verification" class="pure-g" style="display: none">
+  <div class="pure-u-1-2">
+    <div class="form-group">
+      <input type="email" id="verification_email" name="verification_email" value="{{@root.data.accountInfo.verification_email}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
+      <label for="verification_email" class="control-label">Your parent or guardian's email address</label>
+      <span class="bar"></span>
+    </div>
+  </div>
+</div>
+{{else}}
+  <input type="hidden" name="email" value="{{data.auth.email}}">
+  <div class="pure-g">
+    <div class="pure-u-1-2">
+      <div class="form-group">
+        <input id="title" name="title" value="{{@root.data.accountInfo.title}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.title}}>
+        <label for="title" class="control-label">Job title</label>
+        <span class="bar"></span>
+      </div>
+    </div>
+    <div class="pure-u-1-2">
+      <div class="form-group">
+        <input id="phone" name="phone" value="{{@root.data.accountInfo.phone}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.phone}}>
+        <label for="phone" class="control-label">Phone number</label>
+        <span class="bar"></span>
       </div>
     </div>
   </div>
-  {{else}}
-    <input type="hidden" name="email" value="{{data.auth.email}}">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-          <input id="title" name="title" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.title}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.title}}>
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="title" class="mdc-floating-label">Job title</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
-        </div>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-          <input id="phone" name="phone" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.phone}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.phone}}>
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="phone" class="mdc-floating-label">Phone number</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    {{!-- <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone b-margin-full">
-      <div class="mdc-typography--body">
-        Your Local TSI (This field to be replaced with one derived from postcode).
-      </div>
-
-          <select class="mdc-select__native-control" type="email" id="verification_email" name="verification_email">
-            {{!-- This will likely read from a JSON file - -}}
-            <option value="anuttgens@gmail.com">A Test TSI</option>
-            <option value="anuttgens@gmail.com">A Different Test TSI</option>
-          </select>
-
-      </div>
-
-    </div> --}}
-    <input type="hidden" name="verification_email" value="anuttgens@gmail.com" />
-    <input type="hidden" name="admin" value="true" />
-  {{/unless ~}}
-  <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      <input type="hidden" name="local_authority" id="local_authority" value="{{@root.data.accountInfo.local_authority}}" />
-      <input type="hidden" name="tsi_area" id="tsi_area" value="{{@root.data.accountInfo.tsi_area}}" />
-      <input type="hidden" name="tsi_contact" id="tsi_contact" value="{{@root.data.accountInfo.tsi_contact}}" />
-      <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField" style="z-index:100;">
-        <span class="far fa-map-marker-alt mdc-text-field__icon postcode-lookup" tabindex="0" title="Find my location"></span>
-        <input type="text" id="postcode" name="postcode" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.postcode}}" placeholder="" data-lpignore="true" data-location-search='{
-          "laSelector": "[name=\"local_authority\"]",
-          "tsiAreaSelector": "[name=\"tsi_area\"]",
-          "tsiContactSelector": "[name=\"tsi_contact\"]",
-          "locationServicesSelector": ".postcode-lookup"
-        }' {{>form_validation_attributes @root.context.metaData.accountInfoValidation.postcode}}>
-        <div class="mdc-notched-outline">
-          <div class="mdc-notched-outline__leading"></div>
-          <div class="mdc-notched-outline__notch">
-            <label for="postcode" class="mdc-floating-label">
-              {{#if admin}}Work postcode{{else}}Home postcode{{/if}}
-            </label>
-          </div>
-          <div class="mdc-notched-outline__trailing"></div>
-        </div>
-      </div>
+  <input type="hidden" name="verification_email" value="anuttgens@gmail.com" />
+  <input type="hidden" name="admin" value="true" />
+{{/unless ~}}
+<div class="pure-g">
+  <div class="pure-u-1-2">
+    <input type="hidden" name="local_authority" id="local_authority" value="{{@root.data.accountInfo.local_authority}}" />
+    <input type="hidden" name="tsi_area" id="tsi_area" value="{{@root.data.accountInfo.tsi_area}}" />
+    <input type="hidden" name="tsi_contact_email" id="tsi_contact_email" value="{{@root.data.accountInfo.tsi_contact_email}}" />
+    <div class="form-group mdc-text-field--with-leading-icon" style="z-index:100;">
+      <span class="far fa-map-marker-alt mdc-text-field__icon postcode-lookup" tabindex="0" title="Find my location"></span>
+      <input type="text" id="postcode" name="postcode" value="{{@root.data.accountInfo.postcode}}" placeholder="" data-lpignore="true" data-location-search='{
+        "laSelector": "[name=\"local_authority\"]",
+        "tsiAreaSelector": "[name=\"tsi_area\"]",
+        "tsiContactSelector": "[name=\"tsi_contact_email\"]",
+        "locationServicesSelector": ".postcode-lookup"
+      }' {{>form_validation_attributes @root.context.metaData.accountInfoValidation.postcode}}>
+      <label for="postcode" class="control-label">
+        {{#if admin}}Work postcode{{else}}Home postcode{{/if}}
+      </label>
+      <span class="bar"></span>
     </div>
   </div>
 </div>
 
-<input type="hidden" name="external_id" value="{{data.auth.uid}}" />
+<input type="hidden" name="external_id" value="{{@root.data.auth.uid}}" />
 
 <script>
   document.addEventListener("DOMContentLoaded", function(event) {
